--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "scripts": {
     "build-ts": "tsc -p tsconfig.json",
-    "copy": "node tools/copy-package.js && node tools/cleanup.js",
+    "copy": "node tools/copy-package.js && node tools/cleanup-package.js",
     "build:umd": "rimraf dist && rollup -c rollup.config.umd.js",
     "build:esm": "rimraf dist && rollup -c rollup.config.esm.js",
-    "bundle": "rimraf dist && rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js && tsc",
+    "bundle": "rimraf dist && rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js && tsc && ngc",
     "postbundle": "node tools/removecode.js",
     "build": "npm run bundle && npm run copy",
     "publish": "cd ./dist && npm publish"
@@ -34,6 +34,8 @@
     "typescript": "^2.8.1"
   },
   "dependencies": {
+    "@angular/compiler": "^5.2.9",
+    "@angular/compiler-cli": "^5.2.9",
     "@angular/core": "^5.2.9",
     "rxjs": "^5.5.8"
   }
